# OpenRaven

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  LICENSE  OpenRaven_PRD_v1.0.md  OpenRaven_function_v1.0.md  README.md  docker-compose.dev.yml  docker-compose.yml  ecosystem.config.cjs
openraven/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  start_server.sh
openraven/.github/workflows/: ci.yml
openraven/alembic/: env.py
openraven/alembic/versions/: 001_auth_tables.py  002_add_user_locale.py  003_audit_logs.py  004_invitations.py  005_sync_config.py
openraven/cli/: main.py
openraven/data/demo/legal-taiwan/: .theme.json  compliance-合規檢查.md  consulting-顧問合約.md  corporate-公司治理.md  dispute-民事訴訟.md  employment-勞動合約.md  ip-智慧財產權.md  nda-保密協議.md  noncompete-競業禁止.md  pdpa-個資法.md  saas-服務條款.md  startup-新創法律.md
openraven/scripts/: smoke_test.sh
openraven/src/openraven/: __init__.py  config.py  pipeline.py  storage.py
openraven/src/openraven/agents/: chat_page.py  ratelimit.py  registry.py  tunnel.py
openraven/src/openraven/api/: server.py
openraven/src/openraven/audit/: logger.py  routes.py
openraven/src/openraven/auth/: __init__.py  account.py  account_routes.py  db.py  demo.py  google_oauth.py  invitations.py  middleware.py  models.py  passwords.py  reset.py  routes.py  sessions.py  team_routes.py  tenant.py
openraven/src/openraven/connectors/: gdrive.py  gmail.py  google_auth.py  otter.py
openraven/src/openraven/conversations/: history.py  models.py  routes.py
openraven/src/openraven/courses/: html_template.py  planner.py  renderer.py
openraven/src/openraven/discovery/: analyzer.py
openraven/src/openraven/extraction/: alignment.py  extractor.py
openraven/src/openraven/extraction/schemas/: __init__.py  base.py  engineering.py  finance.py  types.py  (+2 more)
openraven/src/openraven/graph/: rag.py
openraven/src/openraven/health/: maintainer.py  reporter.py
openraven/src/openraven/ingestion/: hasher.py  importers.py  parser.py
openraven/src/openraven/sync/: crypto.py  routes.py  snapshots.py
openraven/src/openraven/wiki/: compiler.py
openraven/tests/: conftest.py  test_account.py  test_agents.py  test_api.py  test_audit.py  test_auth.py  test_auth_api.py  test_auth_locale.py  test_auth_reset.py  test_auth_sessions.py  test_config.py  test_connectors.py  test_conversations.py  test_courses.py  test_demo.py  test_discovery.py  test_e2e_demo_conversations.py  test_extraction.py  test_extraction_alignment.py  test_extraction_single_call.py  test_graph.py  test_health.py  test_ingestion.py  test_integration.py  test_integration_demo_conversations.py  test_neo4j_backend.py  test_pipeline.py  test_storage.py  test_sync.py  test_team.py  test_tenant.py  test_wiki.py  test_wiki_template.py
openraven/tests/benchmark/: conftest.py  ground_truth.json  test_accuracy.py  test_smoke.py
openraven/tests/benchmark/corpus/: eng-adr-kafka.md  eng-api-design.md  eng-microservices.md  fin-q1-review.md  fin-tsmc-report.md  gen-meeting-notes.md  gen-onboarding-guide.md  gen-project-charter.md
openraven/tests/fixtures/: sample_en.md  sample_zh.md
(+293 files in other folders)
