[project]
name = "openraven"
version = "0.1.0"
description = "AI-powered personal professional knowledge asset platform"
readme = "README.md"
license = "Apache-2.0"
keywords = ["knowledge-management", "rag", "lightrag", "knowledge-graph", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "langextract>=0.1.0",
    "lightrag-hku>=1.0.0",
    "docling>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "click>=8.1.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "networkx>=3.0",
    "jinja2>=3.1.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "bcrypt>=4.1.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "neo4j>=5.0.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "respx>=0.21.0",
]
ollama = ["ollama"]

[project.urls]
Homepage = "https://github.com/chesterkuo/OpenRaven"
Repository = "https://github.com/chesterkuo/OpenRaven"
Issues = "https://github.com/chesterkuo/OpenRaven/issues"

[project.scripts]
raven = "cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openraven", "cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
